28-02-06 mfp. Added ability to get names of all directly-included
    ParameterSets and vectors of ParameterSets. This was added to
    support the recursive "explosion" of a ParameterSet to produce
    all the ParameterSets it contains.

27-02-06 mfp. Added thread-safe Registry class, to provide a
    repository for the persistent part of ParameterSets used in a
    whole program. This is a first step towards providing persistency
    of ParameterSets in a framework program.

07-02-06 mfp. Added ability for parser and tree walker to deal with
    creating untracked parameters of type ParameterSet. Added
    tests to the test suite to verify correct behavior. Removed
    another wrong test which had required failure when attempting
    to make an empty ParameterSet.

06-02-06 mfp. Add tests of generation of ParameterSetID.
    Added tests to verify that modification of untracked parameters
    does *not* cause a change in ParameterSetID, but addition
    of a (tracked) parameter *does* change the ParameterSetID.

03-02-06 mfp. More fixing of mis-handled untracked/tracked
   differentiation.

    Removed 'ValueError' and 'EntryError' classes, in favor of use of
    edm::Exception.

    Fixed mixing of untracked and tracked parameters.
    Fixed tests to reflect correct behavior.

02-02-06 mfp. Removed default c'tor for Entry class.

02-02-06 mfp. Starting to fix long-standing mishandling of untracked
   parameters. Removed check for 'label' entry in the ParameterSet's
   table; this seems to have been a leftover from a previous
   misunderstanding regarding ParameterSet objects having names. This
   was also probably the source of the (defunct) error messages
   regarding 'anonymous parameter sets'.

31-01-06 mfp. Remove unnecessary rejection of empty parameter sets
   from MakersProcess.cc
   Add test for overriding 'used' blocks and PSets; test is commented
   out because the current code fails! The test/sample.txt file is